--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vuex-jsonschema-validation",
   "version": "0.0.1",
   "description": "vuex state validation for json schema.",
-  "main": "dist/plugin.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
