--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuex-jsonschema-validation",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "vuex state validation for json schema.",
   "main": "src/index.js",
   "scripts": {
@@ -21,7 +21,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "ajv": "^6.10.2"
+    "ajv": "^6.10.2",
+    "deepcopy": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
