--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "vuex-jsonschema-validation",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "vuex state validation for json schema.",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "lint": "eslint src/"
+    "lint": "eslint index.js"
   },
   "keywords": [
     "vuex",
+    "vuex-plugin",
     "plugin",
     "json",
     "json schema"
@@ -22,16 +23,10 @@
   "license": "MIT",
   "dependencies": {
     "ajv": "^6.10.2",
+    "babel-eslint": "^10.0.3",
     "deepcopy": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.7.1",
-    "@babel/runtime": "^7.7.2",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-config-standard": "^14.1.0",
@@ -40,7 +35,6 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "prettier": "^1.19.1"
   }
 }
